--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,9 @@
 @import "./utils/variables";
 @import "./utils/visually-hiden";
-@import "./utils/button";
+@import "./utils/_button";
+@import "./utils/container";
+@import "./utils/section";
 @import "./base/reset";
 @import "./base/base";
+@import "./utils/logo";
+@import "./utils//icons";
