--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "../../index.scss";
+
 .container__header {
   display: flex;
   align-items: center;
@@ -123,4 +125,24 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.logo__accent {
+  color: var(--black);
+}
+
+.logo,
+.logo-footer {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+
+  color: var(--brand-color);
+
+  @media screen and (min-width: 1199px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
